split FreeCategories into FreeCategory and FreeBifCategory
and add a lot of explanations to FreeCategory.
TODO: add explanations to FreeBifCategory too.

--- a/free-categories.cabal
+++ b/free-categories.cabal
@@ -15,7 +15,15 @@ extra-source-files:  README.md
 cabal-version:       >=1.10
 
 library
-  exposed-modules:     FreeCategories
+                     -- , FreeSemigroupoid
+  exposed-modules:     FreeCategory
+                     , FreeBifCategory
+                     -- , FreeSemigroupidalCategory
+                     -- , FreeMonoidalCategory
+                     -- , FreeLinearCategory
+                     -- , FreeAfineCategory
+                     -- , FreeCartesianCategory
+
   -- other-modules:       
   build-depends:       base
   hs-source-dirs:      src
