also compile FreePremonoidal

--- a/free-categories.cabal
+++ b/free-categories.cabal
@@ -18,6 +18,7 @@ library
                      -- , FreeSemigroupoid
   exposed-modules:     FreeCategory
                      , FreeBifCategory
+                     , FreePremonoidal
                      -- , FreeSemigroupidalCategory
                      -- , FreeMonoidalCategory
                      -- , FreeLinearCategory
