--- a/free-categories.cabal
+++ b/free-categories.cabal
@@ -27,5 +27,6 @@ library
 
   -- other-modules:       
   build-depends:       base
+                     , typelevel-rewrite-rules
   hs-source-dirs:      src
   default-language:    Haskell2010
