--- a/free-categories.cabal
+++ b/free-categories.cabal
@@ -15,7 +15,9 @@ extra-source-files:  README.md
 cabal-version:       >=1.10
 
 library
-  exposed-modules:     Premonoidal
+  exposed-modules:     KnownLength
+                     , Tuple
+                     , Premonoidal
                      , FreePremonoidal
 
   -- other-modules:       
